--- a/book/03-CSS3.md
+++ b/book/03-CSS3.md
@@ -65,10 +65,10 @@
 - Cascading Style Sheet
 - Living Standard: CSS3 / CSS4
 - Selektoren fuer Elemente
-- Mehrere Elemente: Klassen (`.class`)
-- Einzelne Elemente: IDs (`#id`)
-- Direkte Strukturen: Child (`html > body`)
-- Verhalten: Pseudoklassen (`a:hover`,`a:visited`)
+- Mehrere Elemente: Klassen ( `.class` )
+- Einzelne Elemente: IDs ( `#id` )
+- Direkte Strukturen: Child ( `html > body` )
+- Verhalten: Pseudoklassen ( `a:hover` , `a:visited` )
 
 ## CSS (Semantik)
 
@@ -275,7 +275,7 @@ h1 {
 - **Alle** Elemente haben `width` und `height`
 - Default-Wert ist `inherit` bzw. `auto`
 - Einheiten fuer Dimensionen sind `em`, `px`, `pt`
-- Neue Einheiten fuer Dimensionen sind `rem`, `vw` und `vh`
+- Weitere sind `rem`, `vw` und `vh`
 
 ## width, height
 
@@ -301,7 +301,7 @@ div {
 
 ## Absolute Position
 
-Wenn position `absolute or fixed` dann haben
+Wenn position `absolute` oder `fixed` dann haben
 Elemente eine Position absolut zur linken oberen
 Ecke des Bildschirms und eine absolute Breite und
 Hoehe.
@@ -326,8 +326,8 @@ div {
 
 ## Relative Position
 
-Wenn position `static or relative` dann haben
-Elemente eine Position `relativ` zu ihrem
+Wenn position `static` oder `relative` dann
+haben Elemente eine Position `relativ` zu ihrem
 umgebenden Element. Der Uebergang von `static`
 zu `absolute or fixed` ist **NUR** mit `relative`
 moeglich.
@@ -363,7 +363,7 @@ div > div > p {
 
 ## Absolute und Fixed
 
-- Angabe `width` und `height` mit `px`, `%` moeglich
+- Angabe `width` und `height` mit `px` , `%` moeglich
 - Absolut zur linken oberen Ecke des Bildschirms
 - Absolut zum eigenen Element ohne Vererbung
 - Position  **NUR** noch mit `top` , `right` , `bottom` , `left`
@@ -388,12 +388,12 @@ div > div > p {
 
 ## Static und Relative
 
-- Angabe `width` und `height` mit `px`, `%` moeglich
+- Angabe `width` und `height` mit `px` , `%` moeglich
 - Relativ zum umgebenden Element
 - `z-index` hat keine Wirkung bei `static`
 - `z-index` hat Einfluss bei `relative`
 
-## Absolute und Fixed
+## Static und Relative
 
 ```html
 <style>
@@ -466,6 +466,14 @@ div.active {
 <div onclick="this.className = this.className === 'active' ? '' : 'active';">Foo</div>
 ```
 
+
+## Live Coding
+
+- Setze `main > section` auf position absolute.
+- section muss volle Breite/Hoehe haben.
+- Baue eine transition fuer section
+- Positioniere section auf `left:100%`
+- Positioniere `section:target` auf `left:0%`
 
 
 = Vendor Prefixes
