--- a/book/04-ES6.md
+++ b/book/04-ES6.md
@@ -19,9 +19,38 @@
 
 ## ES6
 
-- Objekt-Orientierte Sprache
+- Objekt-Basierte Sprache
+- **NICHT** Object-Orientierte Sprache
 - Funktionelle Eigenschaften
 - Prototypische Eigenschaften
+- Embraces Composite Pattern
+
+## ES6
+
+- In einer HTML Datei ausfuehrbar
+- mittels `<script>` Element
+
+## ES6
+
+```html
+<!DOCTYPE html>
+<script>
+console.log('HELLO');
+</script>
+```
+
+## ES6
+
+- verlinkbar mit dem `src` Attribut
+- wird asynchron ausgefuehrt
+
+## ES6
+
+```html
+<!DOCTYPE html>
+<script src="path/to/file.js"></script>
+<script src="path/to/other.js"></script>
+```
 
 ## Garbage Collection
 
@@ -39,7 +68,7 @@
 ## Primitive
 
 Primitive Datentypen sind `Boolean` , `Number` , `String` , `RegExp`.
-Primitive Datentypen verhalten sich anders als Objektinstanzen
+Primitive Datentypen verhalten sich anders als Objektinstanzen.
 
 ## Primitive: undefined
 
@@ -147,6 +176,7 @@ console.log(foo === bar); // false
 - Vergleiche Primitive Datentypen
 - Erklaere das Verhalten von `==` und `===`
 - Optional: Erklaere Type Coercion in ES6
+- Optional: Erklaere `typeof null`
 
 
 
@@ -163,7 +193,7 @@ EGAL auf welche Art das Objekt instanziiert wurde.
 
 - Literal ist `{}`
 - Constructor ist `new Object()`
-- Custom Constructor ist `Object.create(prototype, properties)`
+- Custom Constructor ist `Object.create(prototype,properties)`
 - Objektbasierte Vererbung
 - NICHT Objektorientierte Vererbung
 - Prototype-Chain entscheidet Verhalten von `instanceof`
