--- a/book/06-ES6.md
+++ b/book/06-ES6.md
@@ -32,6 +32,9 @@ console.log(bar()); // 9
 - Neuer Scope ist erstellt mit call Syntax `foo()`
 - `new` keyword erstellt neue Objektinstanz
 - `this` keyword referenziert auf aktuellen Scope
+
+## Function Scopes
+
 - `Function.prototype.call` fuer statische Scope Manipulation
 - `Function.prototype.apply` fuer dynamische Scope Manipulation
 
@@ -83,11 +86,16 @@ var foo = { bar: 1 };
 
 var bar = function() {
 
-	if (foo.bar > 0) {
+	// hoisting transfers qux directly here
+	// var qux = undefined;
+
+	if (foo.bar > 2) {
 		var qux = 3;
 	}
 
-	console.log(qux); // undefined
+	foo.bar++;
+
+	console.log(qux); // undefined, then 3
 
 };
 
@@ -142,7 +150,7 @@ console.log(foo); // bar: 3
 
 - Konstante Variablen ( `const` ) sind Lexical / Block Scoped
 - Muessen zur Laufzeit initialisiert sein
-- Koennen NICHT von ausgefuehrten Funktionen definiert werden
+- Koennen **NICHT** von ausgefuehrten Funktionen definiert werden
 
 ## Konstanten
 
@@ -196,7 +204,7 @@ console.log(qux); // bar: 3
 - Immediately Invoked Function Expressions
 - Sofort ausgefuehrte Funktionsausdruecke
 - Typischerweise Bindung von Variablen
-- Return Wert wird synchron ausgefuehrt
+- Expression wird synchron ausgefuehrt
 
 ## Beispiel
 
@@ -335,6 +343,7 @@ var qux = JSON.parse(bar);
 
 - `map` returned eine neue Array Instanz
 - return Wert des Callbacks ist gemappter Zellinhalt
+- `map((value,index)=>{})`
 
 ## Array.prototype.map
 
@@ -356,7 +365,7 @@ var bar = arr.map(Math.pow.bind(Math, 2)); // 2, 4, 8
 ## Array.prototype.splice
 
 - `splice` modifizert eine Array Instanz
-- splice( offset , length )
+- `splice(offset,length)`
 
 ## Array.prototype.splice
 
@@ -381,6 +390,9 @@ console.log(arr);
 
 - `filter` returned eine neue Array Instanz
 - return Wert des Callbacks entscheidet Kopie des Zellwerts
+- `filter((value,index)=>(true||false))`
+
+## Array.prototype.filter
 
 ```javascript
 var arr = [ 1, 2, 2, 1, 2, 2, 1, 3, 3, 1 ];
@@ -396,6 +408,9 @@ console.log(foo);
 
 - `find` findet das erste Element in einem Array
 - return Wert des Callbacks entscheidet das returned Element
+- `find((value,index)=>(true||false))`
+
+## Array.prototype.find
 
 ```javascript
 var arr = [ 1, 1, 2, 3, 2, 1, 1 ];
