:book: Fixes for MD parser

--- a/book/04-ES6.md
+++ b/book/04-ES6.md
@@ -19,9 +19,11 @@
 
 ## ES6
 
-- Objekt-Orientierte Sprache
+- Objekt-Basierte Sprache
+- **NICHT** Object-Orientierte Sprache
 - Funktionelle Eigenschaften
 - Prototypische Eigenschaften
+- Embraces Composite Pattern
 
 ## Garbage Collection
 
@@ -39,7 +41,7 @@
 ## Primitive
 
 Primitive Datentypen sind `Boolean` , `Number` , `String` , `RegExp`.
-Primitive Datentypen verhalten sich anders als Objektinstanzen
+Primitive Datentypen verhalten sich anders als Objektinstanzen.
 
 ## Primitive: undefined
 
@@ -163,7 +165,7 @@ EGAL auf welche Art das Objekt instanziiert wurde.
 
 - Literal ist `{}`
 - Constructor ist `new Object()`
-- Custom Constructor ist `Object.create(prototype, properties)`
+- Custom Constructor ist `Object.create(prototype,properties)`
 - Objektbasierte Vererbung
 - NICHT Objektorientierte Vererbung
 - Prototype-Chain entscheidet Verhalten von `instanceof`
