--- a/book/03-CSS3.md
+++ b/book/03-CSS3.md
@@ -393,7 +393,7 @@ div > div > p {
 - `z-index` hat keine Wirkung bei `static`
 - `z-index` hat Einfluss bei `relative`
 
-## Absolute und Fixed
+## Static und Relative
 
 ```html
 <style>
@@ -466,6 +466,14 @@ div.active {
 <div onclick="this.className = this.className === 'active' ? '' : 'active';">Foo</div>
 ```
 
+
+## Live Coding
+
+- Setze `main > section` auf position absolute.
+- section muss volle Breite/Hoehe haben.
+- Baue eine transition fuer section
+- Positioniere section auf `left:100%`
+- Positioniere section:hover auf `left:0%`
 
 
 = Vendor Prefixes
