--- a/book/03-CSS3.md
+++ b/book/03-CSS3.md
@@ -473,7 +473,7 @@ div.active {
 - section muss volle Breite/Hoehe haben.
 - Baue eine transition fuer section
 - Positioniere section auf `left:100%`
-- Positioniere section:hover auf `left:0%`
+- Positioniere `section:target` auf `left:0%`
 
 
 = Vendor Prefixes
