:bug: Fixes and Tweaks, now sorted out

--- a/book/04-ES6.md
+++ b/book/04-ES6.md
@@ -149,6 +149,7 @@ console.log(foo === bar); // false
 - Vergleiche Primitive Datentypen
 - Erklaere das Verhalten von `==` und `===`
 - Optional: Erklaere Type Coercion in ES6
+- Optional: Erklaere `typeof null`
 
 
 
