--- a/book/04-ES6.md
+++ b/book/04-ES6.md
@@ -25,6 +25,33 @@
 - Prototypische Eigenschaften
 - Embraces Composite Pattern
 
+## ES6
+
+- In einer HTML Datei ausfuehrbar
+- mittels `<script>` Element
+
+## ES6
+
+```html
+<!DOCTYPE html>
+<script>
+console.log('HELLO');
+</script>
+```
+
+## ES6
+
+- verlinkbar mit dem `src` Attribut
+- wird asynchron ausgefuehrt
+
+## ES6
+
+```html
+<!DOCTYPE html>
+<script src="path/to/file.js"></script>
+<script src="path/to/other.js"></script>
+```
+
 ## Garbage Collection
 
 - Literale sind Runtime Memory
