--- a/book/06-ES6.md
+++ b/book/06-ES6.md
@@ -86,11 +86,16 @@ var foo = { bar: 1 };
 
 var bar = function() {
 
-	if (foo.bar > 0) {
+	// hoisting transfers qux directly here
+	// var qux = undefined;
+
+	if (foo.bar > 2) {
 		var qux = 3;
 	}
 
-	console.log(qux); // undefined
+	foo.bar++;
+
+	console.log(qux); // undefined, then 3
 
 };
 
